trunk/Archive2/a0/a205f596f29ed8/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:5:1: error: stray '\303' in program
 dlhý Fibonacciho ( int n ) 
 ^
main.cpp:5:1: error: stray '\275' in program
main.cpp:8:5: error: stray '\303' in program
     návrat Fibonacciho ( n - 1 )  + Fibonacci ( n - 2 ) ; 
     ^
main.cpp:8:5: error: stray '\241' in program
main.cpp:13:5: error: stray '\304' in program
     std :: chrono :: time_point < std :: chrono :: system_clock > začiatok, koniec , 
     ^
main.cpp:13:5: error: stray '\215' in program
main.cpp:14:5: error: stray '\304' in program
     začiatok = std :: chrono :: system_clock :: teraz ( ) ; 
     ^
main.cpp:14:5: error: stray '\215' in program
main.cpp:15:63: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  <<  "f (42 ) = "  << Fibonacciho ( 42 )  <<  ' \ n ' ; 
                                                               ^
main.cpp:15:63: warning: multi-character character constant [-Wmultichar]
main.cpp:21:5: error: stray '\303' in program
     std :: cout  <<  "dokončil výpočet na"  <<  std :: Ctíme ( a end_time ) 
     ^
main.cpp:21:5: error: stray '\255' in program
main.cpp:22:15: error: stray '\304' in program
               <<  "Uplynulý čas:"  << . elapsed_seconds počítať ( )  <<  "s \ n " ; 
               ^
main.cpp:22:15: error: stray '\215' in program
main.cpp:22:15: error: stray '\303' in program
main.cpp:22:15: error: stray '\255' in program
main.cpp:22:15: error: stray '\305' in program
main.cpp:22:15: error: stray '\245' in program
main.cpp:5:1: error: 'dlh' does not name a type
 dlhý Fibonacciho ( int n ) 
 ^
main.cpp: In function 'int main()':
main.cpp:13:71: error: expected initializer before 'iatok'
     std :: chrono :: time_point < std :: chrono :: system_clock > začiatok, koniec , 
                                                                       ^
main.cpp:15:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "f (42 ) = "  << Fibonacciho ( 42 )  <<  ' \ n ' ; 
     ^
main.cpp:15:56: error: 'Fibonacciho' was not declared in this scope
     std :: cout  <<  "f (42 ) = "  << Fibonacciho ( 42 )  <<  ' \ n ' ; 
                                                        ^
main.cpp:16:5: error: 'koniec' was not declared in this scope
     koniec = std :: chrono :: system_clock :: teraz ( ) ;
     ^
main.cpp:16:14: error: 'teraz' is not a member of 'std::chrono::_V2::system_clock'
     koniec = std :: chrono :: system_clock :: teraz ( ) ;
              ^
main.cpp:18:53: error: 'end' was not declared in this scope
     std::chrono::duration<double> elapsed_seconds = end-start;
                                                     ^
main.cpp:18:57: error: 'start' was not declared in this scope
     std::chrono::duration<double> elapsed_seconds = end-start;
                                                         ^
main.cpp:21:5: error: 'cout' is not a member of 'std'
     std :: cout  <<  "dokončil výpočet na"  <<  std :: Ctíme ( a end_time ) 
     ^
main.cpp:21:52: error: 'Ct' is not a member of 'std'
     std :: cout  <<  "dokončil výpočet na"  <<  std :: Ctíme ( a end_time ) 
                                                    ^
main.cpp:21:63: error: expected ';' before 'me'
     std :: cout  <<  "dokončil výpočet na"  <<  std :: Ctíme ( a end_time ) 
                                                               ^
main.cpp:18:35: warning: unused variable 'elapsed_seconds' [-Wunused-variable]
     std::chrono::duration<double> elapsed_seconds = end-start;
                                   ^
main.cpp:19:17: warning: unused variable 'end_time' [-Wunused-variable]
     std::time_t end_time = std::chrono::system_clock::to_time_t(end);
                 ^
